fix(web): suppress tsconfig baseUrl deprecation warning
